streams/kafka/bitquery-solana-kafka/test_output.log
   Compiling bitquery-solana-kafka v2.0.0 (/home/mch/zolca/repos/zolca-ops/streams/kafka/bitquery-solana-kafka)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
  --> streams/kafka/bitquery-solana-kafka/examples/direct_connection_test.rs:80:57
   |
80 |                 println!("  Payload preview (hex): {}", hex::encode(preview));
   |                                                         ^^^ use of unresolved module or unlinked crate `hex`
   |
   = help: if you wanted to use a crate named `hex`, use `cargo add hex` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `bitquery-solana-kafka` (example "direct_connection_test") due to 1 previous error
